--- a/NLW-Journey/devOps/.github/workflows/main.yml
+++ b/NLW-Journey/devOps/.github/workflows/main.yml
@@ -15,4 +15,4 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Build docker image
-        run: docker build -t frankdias92/nlw.journey.api:latest .
+        run: docker build -t Frankdias92/nlw.journey.api:latest .
