--- a/NLW-Journey/devOps/.github/workflows/main.yml
+++ b/NLW-Journey/devOps/.github/workflows/main.yml
@@ -14,4 +14,5 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Build Docker image
-      run: docker build -t Frankdias92/nlw.journey.api:latest -f ../../Dockerfile ../../
+      working-directory: NLW-Journey/devOps
+      run: docker build -t Frankdias92/nlw.journey.api:latest -f Dockerfile .
