--- a/NLW-Journey/devOps/.github/workflows/main.yml
+++ b/NLW-Journey/devOps/.github/workflows/main.yml
@@ -13,6 +13,22 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
+    - name: Set up Docker Buildx
+      uses: docker/setup-buildx-action@v2
+
+    - name: Cache Docker layers
+      uses: actions/cache@v2
+      with:
+        path: /tmp/.buildx-cache
+        key: ${{ runner.os }}-buildx-${{ github.sha }}
+        restore-keys: |
+          ${{ runner.os }}-buildx-
+
     - name: Build Docker image
-      working-directory: NLW-Journey/devOps
-      run: docker build -t Frankdias92/nlw.journey.api:latest -f Dockerfile .
+      run: docker build -t Frankdias92/nlw.journey.api:latest -f NLW-Next_Level_Week-Rocketseat/NLW-Journey/devOps/Dockerfile NLW-Next_Level_Week-Rocketseat/NLW-Journey/devOps
+
+    - name: Log in to Docker Hub
+      run: echo "${{ secrets.DOCKER_HUB_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_HUB_USERNAME }}" --password-stdin
+
+    - name: Push Docker image
+      run: docker push Frankdias92/nlw.journey.api:latest
